vignette: made it clear that issueCheck filters out future records; any record with a future registration_yr value will not remain in the dataframe

--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -222,7 +222,9 @@ Other quick fixes include:
 
 ### issueCheck
 
-Sometimes we receive HIP records that should be processed in a future season. We also sometiems receive records that should be processed in both this season and a future one, since some states have license years that encompass two seasons. The `issueCheck` function evaluates issue_date and registration_yr for two-season states (ME, MA, ID, CT, WV, VT, NH, IA, ND, and TN) as well as a 365-day state (MS). It also postpones any records from any state that have future registration_yr value.
+Sometimes we receive HIP records that should be processed in a future season. We also sometiems receive records that should be processed in both this season and a future one, since some states have license years that encompass two seasons. The `issueCheck` function evaluates issue_date and registration_yr for two-season states (ME, MA, ID, CT, WV, VT, NH, IA, ND, and TN) as well as a 365-day state (MS). It also sets aside records from any state that have future registration_yr value.
+
+Note: Records "set aside" will be filtered out of the current data and written to a future data .csv file to be accessed in the next HIP season.
 
 For ME, MA, ID, CT, WV, VT, NH, IA, ND, and TN:
 
@@ -358,7 +360,7 @@ validate(DL1301_fixed, type = "horizontal")
 ##  3 MO20211229.txt 1        2697    3604       0.748
 ##  4 ME20211229.txt 1         112     151       0.742
 ##  5 NM20211229.txt 1         208     295       0.705
-##  6 ID20211229.txt 1        1762    2588       0.681
+##  6 ID20211229.txt 1        1763    2588       0.681
 ##  7 ND20211215.txt 1         130     204       0.637
 ##  8 CA20211229.txt 1        2003    3211       0.624
 ##  9 IN20211229.txt 1         416     690       0.603
